--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,15 +38,14 @@ lint:
 
 commit_convention:
   stage: conventions
-  image: node:12
+  before_script: []
+  image:
+    name: auterion/commitlint
+    entrypoint: [""]
   needs: []
-  cache:
-    key: commitlint-node_modules
-    paths:
-      - node_modules/
-  before_script:
-    - bash -c "[[ -d node_modules/ ]] || npm install @commitlint/cli @commitlint/config-conventional; exit 0;"
   script:
-    - npx --quiet commitlint --from="$CI_MERGE_REQUEST_DIFF_BASE_SHA" --help-url 'https://raccoongang.atlassian.net/wiki/spaces/PSC/pages/2662006787/RG+Delivery+Solutions+Conventional+Commits'
+    - commitlint
+      --from="$CI_MERGE_REQUEST_DIFF_BASE_SHA"
+      --help-url 'https://raccoongang.atlassian.net/wiki/spaces/PSC/pages/2662006787/RG+Delivery+Solutions+Conventional+Commits'
   rules:
     - if: "$CI_MERGE_REQUEST_EVENT_TYPE != 'merge_train' && $CI_MERGE_REQUEST_DIFF_BASE_SHA"
