Resolve RGOeX-26017 "Lytvynenko//olive header help link cherry picked"

--- a/lms/envs/help_tokens.ini
+++ b/lms/envs/help_tokens.ini
@@ -11,7 +11,7 @@ courseinfo = learner:SFD_start_course.html
 progress = learner:SFD_check_progress.html
 learneraccountsettings = learner:SFD_update_acct_settings.html
 learnerdashboard = learner:SFD_dashboard_profile_SectionHead.html
-programs = learner:SFD_enrolling.html
+programs = learner:OpenSFD_enrolling.html
 bookmarks = learner:SFD_bookmarks.html
 notes = learner:SFD_notes.html
 wiki = learner:SFD_wiki.html
