--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "postinstall": "scripts/copy-node-modules.sh",
     "build": "npm run webpack && npm run compile-sass",
     "build-dev": "npm run webpack-dev && npm run compile-sass-dev",
-    "webpack": "NODE_ENV=${NODE_ENV:-production} \"$(npm bin)/webpack\" --config=${WEBPACK_CONFIG_PATH:-webpack.prod.config.js}",
-    "webpack-dev": "NODE_ENV=development \"$(npm bin)/webpack\" --config=webpack.dev.config.js",
+    "webpack": "NODE_ENV=${NODE_ENV:-production} webpack --config=${WEBPACK_CONFIG_PATH:-webpack.prod.config.js}",
+    "webpack-dev": "NODE_ENV=development webpack --config=webpack.dev.config.js",
     "compile-sass": "scripts/compile_sass.py --env=${NODE_ENV:-production}",
     "compile-sass-dev": "scripts/compile_sass.py --env=development",
     "watch": "{ npm run watch-webpack& npm run watch-sass& } && sleep infinity",
