--- a/requirements/edx/github.in
+++ b/requirements/edx/github.in
@@ -90,3 +90,6 @@
 # django42 support PR merged but new release is pending.
 # https://github.com/openedx/edx-platform/issues/33431
 -e git+https://github.com/anupdhabarde/edx-proctoring-proctortrack.git@31c6c9923a51c903ae83760ecbbac191363aa2a2#egg=edx_proctoring_proctortrack
+
+-e git+https://github.com/raccoongang/edx-ace.git@mob-develop#egg=edx_ace
+-e git+https://github.com/jazzband/django-push-notifications.git@906fe52058bad36b6af2bb292fdb9292ccaa94e5#egg=django_push_notifications
