--- a/requirements/edx/base.in
+++ b/requirements/edx/base.in
@@ -125,6 +125,7 @@ nodeenv                             # Utility for managing Node.js environments;
 oauthlib                            # OAuth specification support for authenticating via LTI or other Open edX services
 openedx-calc                        # Library supporting mathematical calculations for Open edX
 openedx-filters                     # Open edX Filters from Hooks Extension Framework (OEP-50)
+openedx-events                      # Open edX Events from Hooks Extension Framework (OEP-50)
 optimizely-sdk                      # Optimizely full stack SDK for Python
 ora2>=4.5.0
 outcome-surveys                     # edx-platform plugin to send and track segment events needed for surveys
