Revert "Merge pull request #35713 from openedx/feanil/ubuntu-24.04"
This reverts commit 642dae67f1be5a6e49adbd04ea51f2857bf9d3d3, reversing
changes made to d82aadab516ed67684e2661fa1d04e5ff4273992.

--- a/requirements/edx-sandbox/base.in
+++ b/requirements/edx-sandbox/base.in
@@ -2,7 +2,7 @@
 
 chem                                # A helper library for chemistry calculations
 cryptography                        # Implementations of assorted cryptography algorithms
-lxml[html_clean]                    # XML parser
+lxml                                # XML parser
 matplotlib                          # 2D plotting library
 networkx                            # Utilities for creating, manipulating, and studying network graphs
 nltk                                # Natural language processing; used by the chem package
