--- a/requirements/edx/github.in
+++ b/requirements/edx/github.in
@@ -67,6 +67,7 @@ git+https://github.com/openedx/django-require.git@0c54adb167142383b26ea6b3edecc3
 -e git+https://github.com/openedx/codejail.git@3.1.3#egg=codejail==3.1.3
 -e git+https://github.com/openedx/RateXBlock.git@2.0.1#egg=rate-xblock
 -e git+https://github.com/openedx/xblock-google-drive.git@2d176468e33c0713c911b563f8f65f7cf232f5b6#egg=xblock-google-drive
+-e git+https://github.com/raccoongang/mobile-api-extensions.git@0.0.0+pearson#egg=mobile-api-extensions
 
 # Third Party XBlocks
 
